# zgame-2

./: CMakeLists.txt  algorithm.py  readme.md
application/: application.cpp  application.hpp  settings.hpp  window.hpp
core/: component.hpp  entity.cpp  entity.hpp  entitymanager.cpp  entitymanager.hpp  logger.cpp  logger.hpp  object.cpp  object.hpp  objectfactory.hpp  stddef.hpp  string.cpp  string.hpp  vectors.hpp
tests/: main.cpp
